# ITCT_JPEG

./: CMakeLists.txt  Image.cpp  Image.h  JpegDecoder.cpp  JpegDecoder.h  main.cpp
